--- a/ionic_app/src/index.html
+++ b/ionic_app/src/index.html
@@ -17,8 +17,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
-  <!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyCDoGmJUL_mkRqm0p8B0MtO9Q9YHhoDUPs"></script>-->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCBbOzP7_14lAMvwU1YHz-jkARxAB9f2_o"></script>
+  <!-- Google API scripts removed -->
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
